src/body/body.component.scss
.body{
  height: 100%;
  width: 100%;
}

.col1{
  width: 30%;
  float: left;
  border-left: .5px solid black;
  border-right: .5px solid black;
}

.col2{ 
  width: 40%;
  float: left;
  max-height: 70%;
}

.col3{
  width: calc(30% - 2px);
  float: right;
  border-left: .5px solid black;
  max-height: 70%;
}

.col4{
  width: calc(70% - 2px);
  float: right;
  border-right: .5px solid black;
}

.pic1{
  height: 70%;
  width: 70%;
  padding-left: 5%;
  padding-top: 5%;
  padding-bottom: 50%;
  padding-right: 10%;
}

.pic2{
  height: 90%;
  width: 90%;
  padding-left: 5%;
  padding-top: 5%;
  padding-bottom: 20%;
  padding-right: 10%;
}

.pic3{
  height: 80%;
  width: 80%;
  padding-left: 5%;
  padding-top: 5%;
  padding-bottom: 20%;
  padding-right: 5%;
}

.pic4{
  height: 80%;
  width: 80%;
  padding-left: 5%;
  padding-top: 5%;
  padding-bottom: 20%;
  padding-right: 15%;
}

.pic5{
  height: 80%;
  width: 80%;
  padding-left: 10%;
  padding-top: 10%;
  padding-bottom: 30%;
  padding-right: 5%;
}

.pic6{
  height: 52%;
  width: 52%;
  padding-left: 5%;
  padding-top: 5%;
  padding-bottom: 20%;
  padding-right: 15%;
}

.pic7{
  height: 70%;
  width: 70%;
  padding-left: 25%;
  padding-top: 2%;
  padding-bottom: 25%;
}

.pic8{
  height: 50%;
  width: 50%;
  padding-left: 10%;
  padding-top: 10%;
  padding-bottom: 30%;
  padding-right: 5%;
}

.small-box{
  height: 50px;
  border-bottom: .5px solid black;
}

.medium-box{
  height: 85px;
  border-bottom: .5px solid black;
}

.vertical-box{
  height: 100%;
  width: 50px;
  border: .5px solid black;
}

.pic-container{
  height: 40%;
  border-bottom: .5px solid black;
}

.square{
  height: 70%
}

